RESOLVED FIXED140798
[Win] Accessibility implementation unable to recurse through document (sometimes) to find named elements
https://bugs.webkit.org/show_bug.cgi?id=140798
Summary [Win] Accessibility implementation unable to recurse through document (someti...
Brent Fulgham
Reported 2015-01-22 16:09:51 PST
The layout test 'accessibility/aria-controls-with-tabs.html' is failing as follows: --- /cygdrive/c/Projects/WebKit/OpenSource/WebKitBuild/Release/bin32/layout-test-results/accessibility/aria-controls-with-tabs-expected.txt +++ /cygdrive/c/Projects/WebKit/OpenSource/WebKitBuild/Release/bin32/layout-test-results/accessibility/aria-controls-with-tabs-actual.txt @@ -1,3 +1,4 @@ +CONSOLE MESSAGE: line 34: TypeError: undefined is not an object (evaluating 'tabList.childAtIndex') Crust Veges Test @@ -11,11 +12,7 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS tab2.isSelected is true -PASS tab1.isSelected is false -PASS tab2.isSelected is false -PASS tab1.isSelected is true -PASS successfullyParsed is true +FAIL successfullyParsed should be true (of type boolean). Was undefined (of type undefined). TEST COMPLETE
Attachments
Patch (1.52 KB, patch)
2016-06-16 06:37 PDT, Per Arne Vollan
no flags
Archive of layout-test-results from ews112 for mac-yosemite (1.43 MB, application/zip)
2016-06-16 07:33 PDT, Build Bot
no flags
Radar WebKit Bug Importer
Comment 1 2015-01-22 16:10:27 PST
Brent Fulgham
Comment 2 2015-01-23 09:22:07 PST
*** Bug 140797 has been marked as a duplicate of this bug. ***
Brent Fulgham
Comment 3 2015-01-23 09:22:57 PST
A series of layout test failures are being caused by the inability of the Windows accessibility code to drill down into the document to find elements. I'm not sure what triggers this failure, as some tests seem to work fine.
Per Arne Vollan
Comment 4 2016-06-16 06:37:31 PDT
Build Bot
Comment 5 2016-06-16 07:33:54 PDT
Comment on attachment 281452 [details] Patch Attachment 281452 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1512867 New failing tests: css3/filters/backdrop/backdrop-filter-with-reflection.html
Build Bot
Comment 6 2016-06-16 07:33:57 PDT
Created attachment 281455 [details] Archive of layout-test-results from ews112 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-yosemite Platform: Mac OS X 10.10.5
Brent Fulgham
Comment 7 2016-06-16 16:40:23 PDT
Comment on attachment 281452 [details] Patch r=me. The mac-debug failure is unrelated to this Windows-specific patch.
WebKit Commit Bot
Comment 8 2016-06-16 17:00:41 PDT
Comment on attachment 281452 [details] Patch Clearing flags on attachment: 281452 Committed r202149: <http://trac.webkit.org/changeset/202149>
WebKit Commit Bot
Comment 9 2016-06-16 17:00:45 PDT
All reviewed patches have been landed. Closing bug.
Per Arne Vollan
Comment 10 2016-06-23 03:10:54 PDT
Updated test expectations in https://trac.webkit.org/changeset/202375.
Note You need to log in before you can comment on or make changes to this bug.