[Win] Accessibility implementation unable to recurse through document (sometimes) to find named elements https://bugs.webkit.org/show_bug.cgi?id=140798

Reviewed by Brent Fulgham.

Make sure layout is up-to-date before trying to find named elements.

* DumpRenderTree/win/AccessibilityControllerWin.cpp:
(AccessibilityController::rootElement):


Canonical link: https://commits.webkit.org/176927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202149 268f45cc-cd09-0410-ab3c-d52691b4dbfc